# uk-subsidy-tracker

./: .gitignore  404.html  ARCHITECTURE.md  CHANGES.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  RO-MODULE-SPEC.md  demo_dark_theme.py  index.html  mkdocs.yml  notes.md  pyproject.toml  pyrightconfig.json  search.html  sitemap.xml
.github/: refresh-failure-template.md
.github/workflows/: ci.yml  deploy.yml  refresh.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/notes/: ro-data-strategy-option-a1.md
.planning/seeds/: SEED-001-constant-provenance-tiers-2-3.md  SEED-002-ref-collaboration-followup.md
.zed/: tasks.json
about/citation/: index.html
about/corrections/: index.html
charts/: index.html
charts/html/: cannibalisation_capture_ratio.div.html  cannibalisation_price_vs_wind.div.html  (+17 more)
data/: index.html  lccc-cfd-contract-portfolio-status.csv  ons_gas_sap.xlsx
docs/: index.md
schemes/: index.html
scripts/: backfill_sidecars.py
search/: search_index.json
tests/: conftest.py  test_aggregates.py  test_benchmarks.py  test_conftest_dormant_mark.py  test_constants_provenance.py  test_counterfactual.py  test_csv_mirror.py  test_determinism.py  test_docs_ro_headline_sync.py  test_docs_structure.py  test_manifest.py  test_ons_gas_download.py  test_plotting_dormant_skip.py  test_refresh_loop.py  test_ro_rebuild_smoke.py  test_ro_schemas_smoke.py  test_schemas.py
(+328 files in other folders)
