[project]
name = "uk-subsidy-tracker"
version = "0.1.0"
description = "Independent, open, data-driven audit of UK renewable electricity subsidy costs"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "numpy",
    "openpyxl",
    "pandas",
    "pandera>=0.31.1",
    "plotly",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scipy>=1.17.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uk_subsidy_tracker"]
